--- a/styles/school.css
+++ b/styles/school.css
@@ -102,6 +102,83 @@ color: skyblue;
 
 
 
+.standard{
+    color: #000000;
+    font-size: 38px ;
+    font-weight: 500;
+    text-align: center;
+}
+
+
+/* standard qurriculum styles   */
+
+.standard-qurriculums{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 20px;
+}
+.image-logo{
+    margin-left: 80px;
+    margin-top: 20px;
+}
+.color{
+    background-color: #DEF5FF;
+    margin-right: 80px;
+    border-radius: 15px;
+}
+.color-1st{
+    background-color: #FFF4DC;
+    margin-right: 80px;
+    border-radius: 15px;
+}
+.color-2nd{
+    background-color: #F2E8FF;
+    margin-right: 80px;
+    border-radius: 15px;
+}
+
+
+
+.kinder-heading{
+    font-size: 18px;
+    color: #202020;
+    margin-left: 70px;
+}
+
+.kinder-pragraph{
+    font-size: 14px;
+    color: #808080;
+    margin-left: 20px;
+    margin-right: 30px;
+}
+
+.sapn{
+
+   margin-left: 70px;
+}
+
+.read{
+    color: #64C8FF;
+    font-size: 15px;
+    font-weight: 700;
+    margin-left: 80px;
+    margin-top: -5px;
+}
+.read-1{
+    color: #F0AA00;
+    font-size: 15px;
+    font-weight: 700;
+    margin-left: 80px;
+    margin-top: -5px;
+}
+.read-2{
+    color: #8700FF;
+    font-size: 15px;
+    font-weight: 700;
+    margin-left: 80px;
+    margin-top: -5px;
+}
+
 /* responsive media quary */
 
 
