--- a/styles/school.css
+++ b/styles/school.css
@@ -212,7 +212,13 @@ color: skyblue;
 .btn-primary{
     margin-left: 100px;
 }
-
-
+.standard{
+    font-size: 24px;
+}
+.standard-qurriculums{
+    grid-template-columns:repeat(1, 1fr);
+  
+    gap: 20px;
+}
 
 }
