--- a/styles/school.css
+++ b/styles/school.css
@@ -6,15 +6,11 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-   margin: 50px 60px 50px 60px;
+    margin: 50px 60px 50px 60px;
   }
   
 .display-flex{
     display: flex;
-}
-main{
-    width: 1440px;
-    margin: 0 auto;
 }
 
 /* navbar styles */
@@ -80,7 +76,7 @@ font-weight: 600;
 }
 
 .bannar-contant{
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 400;
     margin-top: -10px;
 }
@@ -123,7 +119,7 @@ color: skyblue;
 }
 .color{
     background-color: #DEF5FF;
-    margin-right: 80px;
+    margin-right: 70px;
     border-radius: 15px;
 }
 .color-1st{
@@ -148,8 +144,8 @@ color: skyblue;
 .kinder-pragraph{
     font-size: 14px;
     color: #808080;
-    margin-left: 20px;
-    margin-right: 30px;
+    margin-left: 10px;
+  
 }
 
 .sapn{
@@ -178,6 +174,164 @@ color: skyblue;
     margin-left: 80px;
     margin-top: -5px;
 }
+/* main section styles */
+
+
+
+.section-stories{
+    display:flex;
+    flex-wrap: wrap;
+    gap: 10px;
+ 
+  
+ 
+}
+
+.section-grid, .section-grid-2{
+
+    display: flex;
+   gap: 20px;
+
+}
+
+
+
+
+
+.stories{
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.main-section {
+    background-color: #b4abab;
+   margin-right: 565px;
+   border-radius: 10px;
+  
+}
+.img{
+border-radius: 10px;
+}
+.btn-color{
+    width: 170px;
+    height: 30px;
+   background-color: #3CD8E8;
+   color: #FFFFFF;
+   border-radius: 15px;
+   margin-left: 30px;
+   margin-top: -40px;
+}
+.fun, .naver{
+    margin-left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* footer styles */
+
+
+
+
+    
+    footer{
+        background-color: #01ACFD;
+        padding: 50px;
+        margin-top: 60px;
+    }
+    
+    .containars{
+      
+       display: flex;
+    justify-content: center;
+    
+    }
+    
+.footer-hd{
+    font-size: 24px;
+    margin-bottom: 15px;
+  
+   text-align: center;
+ 
+}
+.footer-contants{
+    width: 33.3%;
+}
+.footer-contants p{
+margin: 0;
+padding: 7;
+}
+.footer-contants ul{
+    text-align: center;
+}
+
+.list li{
+  text-align: center;
+  list-style: none;
+  padding: 7;
+  position: relative;
+}
+.list a{
+    text-decoration: none;
+}
+.icons{
+    text-align: center;
+    padding: 0;
+}
+
+.icons li{
+    display: inline-block;
+    text-align: center;
+    padding: 5px;
+}
+.icons img{
+    margin-left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* responsive media quary */
 
@@ -217,7 +371,6 @@ color: skyblue;
 }
 .standard-qurriculums{
     grid-template-columns:repeat(1, 1fr);
-  
     gap: 20px;
 }
 
