--- a/styles/school.css
+++ b/styles/school.css
@@ -125,12 +125,12 @@ color: skyblue;
     margin-right: 80px;
     border-radius: 15px;
 }
-.color-1st{
+.color-2nd{
     background-color: #FFF4DC;
     margin-right: 80px;
     border-radius: 15px;
 }
-.color-2nd{
+.color-3rd{
     background-color: #F2E8FF;
     margin-right: 80px;
     border-radius: 15px;
@@ -177,6 +177,33 @@ color: skyblue;
     margin-left: 80px;
     margin-top: -5px;
 }
+.icon-bar{
+  
+    margin-left: 250px;
+}
+.icon-bar, .left-icon{
+    margin-top: 20px;
+    width: 30%;
+    float: left;
+  
+}
+
+
+.icon-bar, .right-icon{
+    margin-top: 20px;
+    width: 30%;
+    float: right;
+ 
+}
+.left-icon{
+ border: 1px;
+}
+
+
+
+
+
+
 /* main section styles */
 
 
@@ -200,11 +227,13 @@ color: skyblue;
    
 }
 
-#box-4, #box-5{
+#box-3{
     
     grid-column: span 3;
 }
-
+.heading-hd{
+    margin-left: 30px;
+}
 .main-btn{
     background-color: #3CD8E8;
     color: #FFFFFF;
@@ -212,8 +241,8 @@ color: skyblue;
     height: 30px;
     border-radius: 15px;
     margin-left: 30px;
-   
 }
+
 .main-btn-1, .main-btn-3, .main-btn-4{
     background-color: #95B226;
     color: #FFFFFF;
@@ -417,7 +446,9 @@ color: #DEF5FF;
     gap: 20px;
 }
 
-
+.icon-bar{
+    margin-left: 150px;
+}
 
 
 .containars{
@@ -450,6 +481,30 @@ margin-right: -60px;
     font-size: 13px;
     margin-right: 130px;
 }
+
+
+.box-styles{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+   gap: 10px;
+    }
+    .box-styles, .img-pic{
+  
+    
+    }
+#box-1{
+    display: none;
+}
+
+
+
+
+
+
+
+
+
 
 
 
